mido_defconfig: Enable FP Boost

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4557,6 +4557,9 @@ CONFIG_QUICK_WAKEUP=y
 # USB Fast charging
 CONFIG_FORCE_FAST_CHARGE=y
 
+# Fingerprint boost
+CONFIG_FINGERPRINT_BOOST=y
+
 # CPUQUIET
 CONFIG_CPU_QUIET=y
 CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
