--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -168,10 +168,10 @@ CONFIG_BPF=y
 CONFIG_EXPERT=y
 CONFIG_UID16=y
 # CONFIG_SGETMASK_SYSCALL is not set
-CONFIG_SYSFS_SYSCALL=y
+# CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_SYSCTL_SYSCALL is not set
-CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
+# CONFIG_KALLSYMS is not set
+# CONFIG_KALLSYMS_ALL is not set
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
@@ -185,7 +185,7 @@ CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
-CONFIG_PCI_QUIRKS=y
+# CONFIG_PCI_QUIRKS is not set
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -424,7 +424,6 @@ CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
-CONFIG_ZCACHE=y
 # CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
@@ -1039,7 +1038,7 @@ CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_WANT_DEV_COREDUMP=y
-CONFIG_ALLOW_DEV_COREDUMP=y
+# CONFIG_ALLOW_DEV_COREDUMP is not set
 CONFIG_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
@@ -1640,7 +1639,7 @@ CONFIG_INPUT=y
 # Userland interfaces
 #
 CONFIG_INPUT_MOUSEDEV=y
-CONFIG_INPUT_MOUSEDEV_PSAUX=y
+# CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
@@ -1715,7 +1714,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_v26 is not set
@@ -1776,7 +1775,7 @@ CONFIG_TOUCHSCREEN_GT9XX=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
-CONFIG_INPUT_HBTP_INPUT=y
+# CONFIG_INPUT_HBTP_INPUT is not set
 # CONFIG_HBTP_INPUT_SECURE_TOUCH is not set
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
@@ -1852,7 +1851,8 @@ CONFIG_UNIX98_PTYS=y
 CONFIG_SERIAL_CORE=y
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
-# CONFIG_SERIAL_MSM_HSL is not set
+CONFIG_SERIAL_MSM_HSL=y
+# CONFIG_SERIAL_MSM_HSL_CONSOLE is not set
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -2573,7 +2573,7 @@ CONFIG_MSM_SDE_ROTATOR=y
 #
 # Supported MMC/SDIO adapters
 #
-CONFIG_RADIO_ADAPTERS=y
+# CONFIG_RADIO_ADAPTERS is not set
 # CONFIG_RADIO_SI470X is not set
 # CONFIG_RADIO_SI4713 is not set
 # CONFIG_USB_MR800 is not set
@@ -2593,9 +2593,8 @@ CONFIG_RADIO_ADAPTERS=y
 # Texas Instruments WL128x FM driver (ST based)
 #
 # CONFIG_RADIO_WL128X is not set
-CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=y
-CONFIG_RADIO_SILABS=y
+# CONFIG_RADIO_IRIS is not set
+# CONFIG_RADIO_SILABS is not set
 # CONFIG_CYPRESS_FIRMWARE is not set
 
 #
@@ -2687,8 +2686,8 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 #
 # Graphics support
 #
-CONFIG_VGA_ARB=y
-CONFIG_VGA_ARB_MAX_GPUS=16
+# CONFIG_VGA_ARB is not set
+# CONFIG_VGA_ARB_MAX_GPUS is not set
 CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 CONFIG_MSM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
@@ -2799,7 +2798,7 @@ CONFIG_SND_JACK=y
 CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_SND_MAX_CARDS=32
 CONFIG_SND_SUPPORT_OLD_API=y
-CONFIG_SND_VERBOSE_PROCFS=y
+# CONFIG_SND_VERBOSE_PROCFS is not set
 # CONFIG_SND_VERBOSE_PRINTK is not set
 # CONFIG_SND_DEBUG is not set
 # CONFIG_SND_RAWMIDI_SEQ is not set
@@ -3140,17 +3139,17 @@ CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_DEBUG is not set
 # CONFIG_USB_STORAGE_REALTEK is not set
-CONFIG_USB_STORAGE_DATAFAB=y
-CONFIG_USB_STORAGE_FREECOM=y
-CONFIG_USB_STORAGE_ISD200=y
-CONFIG_USB_STORAGE_USBAT=y
-CONFIG_USB_STORAGE_SDDR09=y
-CONFIG_USB_STORAGE_SDDR55=y
-CONFIG_USB_STORAGE_JUMPSHOT=y
-CONFIG_USB_STORAGE_ALAUDA=y
+# CONFIG_USB_STORAGE_DATAFAB is not set
+# CONFIG_USB_STORAGE_FREECOM is not set
+# CONFIG_USB_STORAGE_ISD200 is not set
+# CONFIG_USB_STORAGE_USBAT is not set
+# CONFIG_USB_STORAGE_SDDR09 is not set
+# CONFIG_USB_STORAGE_SDDR55 is not set
+# CONFIG_USB_STORAGE_JUMPSHOT is not set
+# CONFIG_USB_STORAGE_ALAUDA is not set
 # CONFIG_USB_STORAGE_ONETOUCH is not set
-CONFIG_USB_STORAGE_KARMA=y
-CONFIG_USB_STORAGE_CYPRESS_ATACB=y
+# CONFIG_USB_STORAGE_KARMA is not set
+# CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
 # CONFIG_USB_UAS is not set
 
@@ -3731,8 +3730,7 @@ CONFIG_MSM_GLINK=y
 CONFIG_MSM_GLINK_LOOPBACK_SERVER=y
 CONFIG_MSM_GLINK_SMD_XPRT=y
 CONFIG_MSM_GLINK_SMEM_NATIVE_XPRT=y
-CONFIG_MSM_SPCOM=y
-CONFIG_MSM_SMEM_LOGGING=y
+# CONFIG_MSM_SMEM_LOGGING is not set
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
 CONFIG_MSM_SPM=y
@@ -3929,7 +3927,10 @@ CONFIG_EFI_RUNTIME_WRAPPERS=y
 CONFIG_EFI_ARMSTUB=y
 CONFIG_MSM_TZ_LOG=y
 # CONFIG_BIF is not set
-# CONFIG_MOBICORE_DRIVER is not set
+# CONFIG_PARAM_READ_WRITE is not set
+CONFIG_OEM_DEBUG_SUPORT=y
+CONFIG_OEM_TRACE_SUPORT=y
+CONFIG_OEM_FORCE_DUMP=y
 
 #
 # Firmware Drivers
@@ -3971,7 +3972,6 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_NILFS2_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
-CONFIG_FS_ENCRYPTION=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4062,7 +4062,7 @@ CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_IO_TRACE is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_EFIVAR_FS is not set
-CONFIG_NETWORK_FILESYSTEMS=y
+# CONFIG_NETWORK_FILESYSTEMS is not set
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
 # CONFIG_CEPH_FS is not set
@@ -4149,7 +4149,7 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
