--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3758,7 +3758,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 # CONFIG_MSM_POWER is not set
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
@@ -4561,3 +4561,13 @@ CONFIG_QUICK_WAKEUP=y
 
 # USB Fast charging
 CONFIG_FORCE_FAST_CHARGE=y
+
+# CPUQUIET
+CONFIG_CPU_QUIET=y
+CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+# CONFIG_CPU_QUIET_GOVERNOR_USERSPACE is not set
+# CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE is not set
+# CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
+CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
+CONFIG_CPU_QUIET_MSM=y
