Defconfig: Enable Qnovo

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4569,3 +4569,6 @@ CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
 CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
 CONFIG_CPU_QUIET_MSM=y
+
+# Enable Qnovo
+CONFIG_QNS_SYSTEM=y
