defconfig: Enable snappy compression and decompression

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4587,3 +4587,7 @@ CONFIG_FRANDOM=y
 
 # State notifier
 CONFIG_STATE_NOTIFIER=y
+
+# Snappy
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
