Defconfig: Various changes Disable binder since we're not on oreo, switch back to msm_performance

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -3606,7 +3606,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_DEVICES=is not set
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -3817,7 +3817,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_PERFORMANCE=y
-# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_MSM_POWER is not set
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
@@ -4567,14 +4567,14 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_FINGERPRINT_BOOST=y
 
 # CPUQUIET
-CONFIG_CPU_QUIET=y
-CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
+# CONFIG_CPU_QUIET=y
+# CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE is not set
 # CONFIG_CPU_QUIET_GOVERNOR_USERSPACE is not set
 # CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE is not set
 # CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
-CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
-CONFIG_CPU_QUIET_MSM=y
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE is not set
+# CONFIG_CPU_QUIET_MSM is not set
 
 # Enable Qnovo
 CONFIG_QNS_SYSTEM=y
