--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4576,7 +4576,7 @@ CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE is not set
 # CONFIG_CPU_QUIET_MSM is not set
 
-# Enable Qnovo
+# Qnovo
 CONFIG_QNS_SYSTEM=y
 
 # Electron governor
@@ -4584,3 +4584,6 @@ CONFIG_CPU_FREQ_GOV_ELECTRON=y
 
 # Frandom
 CONFIG_FRANDOM=y
+
+# State notifier
+CONFIG_STATE_NOTIFIER=y
